P4ADEV-1774 sonar fix